<resources>
    <string name="app_name" translatable="false">Express English</string>
    <string name="premium_account_price" translatable="false">2.99$</string>
    <string name="base64Key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhvWCZ4cVTUzl10utkKLPXg4vS4+9T+gI2bMaxVF0TAbTt2h2jVndOoiZjbCa1CNGUQCWYZ4IoyQCdMotmSdnNk53UgZnetHRbOa+FvVaHGa9EjGI9vpPYPRSPN1jxJmMuAcn9rmqspbTu3/oNeHrPTAvaUNv+IrPN/pElusXoYM9GoM8OaEJpowZ/QGUPRB+C+KG64bgPxI49lyZgDT4TO/F0UOceVkbf/hBnzzEtdKuDpCgM0mLRcO4SvEabrpsnlRxYnnd3MP0uyWDevdnL4eC6j9A2bb/epz/nxzaonAzLqGhNzXwb2cDnV8tvLSja9bdBZFICV+HSo83cjv4xwIDAQAB</string>

    <!-- Home Fragment { -->
    <string name="hello" translatable="false">Hello</string>
    <string name="userLvl" translatable="false">Your level:</string>
    <string name="unknownLvl" translatable="false">\u003F</string>
    <string name="A1Lvl" translatable="false">A1</string>
    <string name="A2Lvl" translatable="false">A2</string>
    <string name="B1Lvl" translatable="false">B1</string>
    <string name="B2Lvl" translatable="false">B2</string>
    <string name="C1Lvl" translatable="false">C1</string>
    <string name="C2Lvl" translatable="false">C2</string>
    <string name="man" translatable="false">Man</string>
    <string name="woman" translatable="false">Woman</string>
    <string name="learner" translatable="false">learner</string>
    <string name="btnTest">Test</string>
    <string name="learnedTopics">Learned topics:</string>
    <string name="selectedWords">Selected words:</string>
    <string name="favoriteBooks">Favorite books:</string>
    <string name="examsPassed">Exams passed:</string>
    <string name="hintSearchTopic">Search a topic…</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="grammar">Grammar</string>
    <string name="books">Books</string>
    <string name="translator">Translator</string>
    <string name="exams">Exams</string>
    <string name="words">Words</string>
    <string name="premium">Premium</string>
    <!-- } -->

    <!-- Books Fragment { -->
    <string name="btnRead">Read</string>
    <!-- } -->

    <!-- ReadBook Fragment { -->
    <string name="book">Hello Hello \n Hello \nHello</string>
    <string name="saveBook">Add to favorites</string>
    <string name="darkMode">Dark Mode</string>
    <string name="fontSize">Font size</string>
    <string name="normal">normal</string>
    <string name="small">small</string>
    <string name="large">large</string>
    <!-- } -->

    <!-- Dialogs { -->
    <string name="langSettings">Offline Translation</string>
    <string name="chooseLang">Choose your native language:</string>
    <string name="dialogLangInfo">The language package will be downloaded ~ 30MB</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="noInternet">Internet not found</string>
    <string name="dialogAppLangInfo">Application Languages:</string>
    <string name="russian">Russian</string>

    <string name="phrase">Example</string>
    <string name="inYourLang">in your language</string>
    <string name="exampleInEng">Example in English</string>

    <string name="blocked">Locked</string>
    <string name="restrictedContent">Limited content</string>
    <string name="showAds">Watch an ad</string>
    <!-- } -->

    <!-- Words Fragment { -->
    <string name="btnLearnRandom">Learn random words</string>
    <string name="btnAddWord">Add a word</string>
    <string name="wordsFragmentTitle">Selected Words</string>
    <string name="groupOfWords">Group</string>
    <string name="numberOfWords">words</string>
    <string name="noData">You have no words to learn,\nRead books and add words!</string>
    <string name="readBooks">Read Books</string>
    <string name="toastTooFewWords">You have too few words!</string>
    <!-- } -->

    <!-- Translator Fragment { -->
    <string name="editTextTranslator">Type your text</string>
    <string name="engTo">English -</string>
    <string name="btnAddToWords">Add to words</string>
    <string name="toastCopied">Copied</string>
    <string name="toastNoWords">Nothing to add</string>
    <string name="toastTooLong">Too long text!</string>
    <!-- } -->

    <!-- Grammar Fragment { -->
    <string name="selectLevel">Select your level</string>
    <string name="btnA1Title">A1 - Elementary</string>
    <string name="btnA2Title">A2 - Pre-Intermediate</string>
    <string name="btnB1Title">B1 - Intermediate</string>
    <string name="btnA1Topics">19 topics</string>
    <string name="btnA2Topics">17 topics</string>
    <string name="btnB1Topics">14 topics</string>
    <string name="getYourLevel">Get your level</string>
    <string name="quickTest">Express Test</string>
    <string name="quickTestTime">5 min</string>
    <string name="or">or</string>
    <string name="examsTime">15 min</string>
    <!-- } -->
    <!-- Practice Fragment { -->
    <string name="correctAnswered">You answered correctly:</string>
    <string name="chooseAnswers">Choose the correct answer</string>
    <!-- } -->
    <!-- Test Fragment { -->
    <string name="dontKnow"><i>I don\'t know</i></string>
    <string name="tryAgain">Try again</string>
    <string name="yourLevelIs">Your level is approximately:</string>
    <string name="orLess">or less</string>
    <string name="orMore">or more</string>
    <string name="testDetails">View details and recommendations</string>
    <string name="shouldLearn">You should learn these topics:</string>
    <string name="success">Success!</string>
    <string name="failure">Failure!</string>
    <string name="examPassedSuccessfully">passed successfully</string>
    <string name="examFailed">failed</string>
    <!-- } -->
    <!-- Exams Fragment { -->
    <string name="exam">Exam</string>
    <string name="examN1">Exam №1</string>
    <string name="examN2">Exam №2</string>
    <string name="examN3">Exam №3</string>
    <string name="questions"> questions</string>
    <!-- } -->
    <!-- Game Fragments { -->
    <string name="fleshCardsTitle">Flesh Cards</string>
    <string name="writeWordTitle">Writing</string>
    <string name="selectWordTitle">Select</string>
    <string name="show">Show</string>
    <string name="next">Next</string>
    <string name="write">write</string>
    <string name="check">Check</string>
    <string name="toastTooFewWordsForGame">You need 5 words for this game</string>
    <!-- } -->
    <!-- First Open { -->
    <string name="helloLearner">Hello, learner!</string>
    <string name="letMeFindOut">Let me find out more about you</string>
    <string name="yourName">1. Your name:</string>
    <string name="nameHint">John</string>
    <string name="selectGender">2. Select your gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yourNativeLang">3. Your native language:</string>
    <!-- } -->
    <!-- Shop Fragment { -->
    <string name="shop">Shop</string>
    <string name="buy">GET PREMIUM</string>
    <string name="bought">Purchased</string>
    <string name="clickForCurrency">*click to see the price in your currency</string>
    <string name="premiumAccount">Premium Account</string>
    <string name="oldPrice">
        <![CDATA[
        One-time payment <s><b>12.99$</b></s>
        ]]>
    </string>
    <string name="timeLeft">time left</string>
    <string name="purchaseDetails">
        - Full content unlock
        \n- Disabling ads
        \n- For ever (∞)
    </string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <!-- } -->
    <!-- Drawer Navigation { -->
    <string name="btnHelp">Report a problem</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="btnShare">Share</string>
    <string name="btnBuyDrawer">Get Premium!</string>
    <string name="ourApps">Our Apps</string>
    <string name="btnLanguages">Languages</string>
    <string name="rateUs">Rate us</string>
    <!-- } -->

    <string name="exit">Exit</string>
    <string name="example"><i>Example</i></string>
    <string name="error">Error</string>
    <string name="english">English</string>
    <string name="toastExitApp">Click again to quit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="free">Free</string>
    <string name="learned">Learned</string>
    <string name="practice">Practice</string>

</resources>