<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/style_menu_ic_home"
        />
    <item
        android:id="@+id/translatorFragment"
        android:title="@string/translator"
        android:icon="@drawable/style_menu_ic_translator"
        />
    <item
        android:id="@+id/grammarFragment"
        android:title="@string/grammar"
        android:icon="@drawable/style_menu_ic_grammar"
        />
    <item
        android:id="@+id/booksFragment"
        android:title="@string/books"
        android:icon="@drawable/style_menu_ic_book"
        />
    <item
        android:id="@+id/itemMore"
        android:title="@string/more"
        android:icon="@drawable/style_menu_ic_more"
        />
</menu>