<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialogAppLangInfo"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_05"
            android:textSize="13sp" />

        <TextView
            android:layout_marginHorizontal="85dp"
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_selected_language"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/english"
            android:textColor="@color/black_3"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/btnRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/russian"
            android:textColor="@color/black_3"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>