<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".fragments.ShopFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/shop"
        android:textColor="@color/blue_main"
        android:textSize="26sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/premiumAccount"
                android:textColor="@color/black_3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"
                app:fontFamily="@font/raleway_medium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/icon_crown" />


                <TextView
                    android:id="@+id/tvOldPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/oldPrice"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tvNewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4.99$"
                    android:textColor="@color/red"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:fontFamily="@font/raleway_medium"
                    app:fontFamily="@font/raleway_medium"
                    tools:text="04 days - 23 hours - 32 min - 20 sec"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray_05"
                android:text="@string/timeLeft"/>

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_3"
                android:text="@string/purchaseDetails"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:id="@+id/btnPurchase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_violet"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/raleway_medium" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@null"
                android:src="@drawable/icon_crown" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/clickForCurrency"
        android:textColor="@color/black_3"
        android:textSize="13sp"
        android:textStyle="italic" />
</LinearLayout>