<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.grammar.ResultExamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/exit"
                android:textColor="@color/blue_main"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/btnRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_reset_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tryAgain"
                    android:textColor="@color/blue_main"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_success" />

        <TextView
            android:id="@+id/tvSuccessOrFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/success"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lvlAndExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="A1 - Exam N3"
            android:textColor="@color/black_3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/examPassedSuccessfully"
            android:textColor="@color/black_3"
            android:textStyle="bold" />

        <LinearLayout
            android:background="@drawable/style_drawer_element_click"
            android:id="@+id/btnDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginBottom="1dp"
                android:text="@string/testDetails"
                android:textColor="@color/gray_03"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/ivExpandMore"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_expand_more_24" />
        </LinearLayout>
        <TextView
            android:id="@+id/rightAnswered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black_3"
            tools:text="@string/correctAnswered" />
        <TextView
            android:id="@+id/detailsSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/shouldLearn"
            android:textColor="@color/black_3"/>

        <TextView
            android:id="@+id/listOfIncorrectAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black_3"
            tools:text="A1 - Hello\nA2 - Hello" />

    </LinearLayout>

</ScrollView>