<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.WordsFragment">
    <LinearLayout
        android:gravity="center"
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noData"
            android:textColor="@color/black_2"/>
        <Button
            android:id="@+id/readBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readBooks"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wordsTitle"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/wordsFragmentTitle"
            android:textColor="@color/blue_main"
            android:textSize="26sp" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/learnRandomWords"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:gravity="center"
            android:background="@drawable/style_button_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLearnRandom"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/icon_random"
                android:adjustViewBounds="true"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>